# opc-daae-server-sdk-1

./: CHANGELOG.md  OPC DAAE Server SDK .NET.chm  OPC DAAE Server SDK C++.chm  OPC DAAE Server SDK DLL.chm  README.md
examples/c++/DaAeSampleServer/: CMakeLists.txt  ClassicNodeManager.cpp  OpcDaAeServer.rc  OpcDaAeServer.vs2019.sln  OpcDaAeServer.vs2019.vcxproj  OpcDaAeServer.vs2019.vcxproj.filters  resource.h
examples/c++/DaSampleServer/: CMakeLists.txt  ClassicNodeManager.cpp  ClassicNodeManager.h  OpcDaServer.rc  OpcDaServer.vs2019.sln  OpcDaServer.vs2019.vcxproj  OpcDaServer.vs2019.vcxproj.filters  resource.h
examples/dll/DaAeSampleServer/: ClassicNodeManager.cpp  ClassicNodeManager.h  IClassicBaseNodeManager.cpp  IClassicBaseNodeManager.h  ReadMe.txt  ServerPlugin.rc  ServerPlugin.vs2019.vcxproj  StdAfx.cpp
examples/dll/DaSampleServer/: ClassicNodeManager.cpp  ClassicNodeManager.h  IClassicBaseNodeManager.cpp  IClassicBaseNodeManager.h  PostBuild.bat  PostBuild64.bat  ReadMe.txt  ServerPlugin.rc  ServerPlugin.vs2019.sln  StdAfx.h
examples/net/C#/DaAeSampleServer/: AssemblyInfo.cs  ClassicNodeManager.cs  ReadMe.txt
examples/net/C#/DaSampleServer/: ClassicBaseNodeManager.cs  ClassicNodeManager.cs  ReadMe.txt  ServerPlugin.vs2019.csproj  ServerPlugin.vs2019.sln
include/Classic/inc32/: OpcCmd.h  OpcCmd_i.c  OpcDx.h  OpcDx_i.c  OpcEnum.h  OpcEnum_i.c  opcSec.h  opcSec_i.c  opc_ae.h  opc_ae_i.c  opcbc.h  opcbc_i.c  opccomn.h  opccomn_i.c  opcda.h  opcda_i.c  opchda.h  opchda_i.c
include/Classic/inc64/: OpcCmd.h  OpcCmd_i.c  OpcDx.h  OpcDx_i.c  OpcSec.h  OpcSec_i.c  opc_ae.h  opc_ae_i.c  opcbc.h  opcbc_i.c  opccomn.h  opccomn_i.c  opcda.h  opcda_i.c  opchda.h  opchda_i.c
scripts/: CopyClassicFiles.vbs
